k8s/grafana-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana.nanni.live
    http:
      paths:
      -  backend:
          serviceName: grafana
          servicePort: 80
