k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jquery-ingress
  namespace: jquery
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dev-jquery.nanni.live
    http:
      paths:
      -  backend:
          serviceName: jquery-svc
          servicePort: 80
