k8s/prometheu-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prometheus.nanni.live
    http:
      paths:
      -  backend:
          serviceName: prometheus-server
          servicePort: 80
